--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "iconv-lite": "^0.6.3",
-    "puppeteer": "^21.0.1"
+    "puppeteer": "^21.0.1",
+    "winston": "^3.10.0"
   },
   "description": ""
 }
