--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.3.1",
     "iconv-lite": "^0.6.3",
     "puppeteer": "^21.0.1",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "description": ""
 }
