--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "app.js": "node app.js"
   },
   "keywords": [],
@@ -19,5 +19,8 @@
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
