--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "larabot",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "jest",
-    "app.js": "node app.js"
+    "app.js": "node src/app.js"
   },
   "keywords": [],
   "author": "",
